fix(DejaChips): Chips height aligned to material

--- a/src/component/chips/chips.component.scss
+++ b/src/component/chips/chips.component.scss
@@ -13,12 +13,12 @@
 	>span {
 		float: left;
 		margin: 0.1rem;
-		border-radius: 1rem;
+		border-radius: 0.88rem;
 		display: flex;
 		align-items: center;
 		text-decoration: none;
 		transition: 0.3s;
-		padding: 0.5rem;
+		padding: 0.38rem;
 		cursor: default;
 		#close-button {
 			font-size: 1rem;
